<resources>
    <string name="app_name">CULife</string>
    <string name="action_settings">Settings</string>
    <string name="date_format">%1$d-%2$d-%3$d</string>
    <string name="default_value">---</string>
    <string name="exit_app_warning">Press the return button again to exit</string>
    <string name="http_loading_text">Loading&#8230;</string>
    <string name="network_connect_disable">Lost the internet connection</string>
    <string name="network_connect_errors">Error to connet to internet</string>
    <string name="server_connect_errors">Error to connet to server</string>
    <string name="success_title">Success</string>
    <string name="success_confirm">Comfirm</string>
    <string name="search_result">Search result</string>
    <string name="selection_title">Selection</string>
    <string name="time_format">%1$d:%2$d</string>
    <string name="time_format_period">%1$s&#032;to&#032;%2$s</string>
    <string name="date_format_period">%1$s&#032;to&#032;%2$s</string>
    <string name="time_format_chinese">%1$d:%2$d (h:m)</string>
    <string name="date_format_chinese">%1$s/%2$s/%3$s (yyyy/mm/dd)</string>
    <string name="warning_title">Warning</string>
    <string name="warning_confirm">Comfirm</string>
    <string name="warning_cancel">Cancel</string>
    <string name="habbit_pull_fail">This habbit doesn't exist</string>
    <string name="should_login">Please login first</string>
    <string name="menu_search">Advanced search</string>
    <string name="nav_home">Home</string>
    <string name="nav_range">Friends</string>
    <string name="nav_add">Post</string>
    <string name="nav_message">Message</string>
    <string name="nav_other_mission">Other mission</string>
    <string name="permission_require">Need some permissions to execute the application</string>
    <string name="permission_check">Check the permission</string>
    <string name="permission_reject">The programe will be end in 2 second</string>
    <string name="login_normal">Login</string>
    <string name="login_wechat">Login through wechat</string>
    <string name="login_register">New commer？Click here to register</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forget_password">Forget your password？</string>
    <string name="login_phone_hint">Phone number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_warning_input_phone_num">Please input your phone number</string>
    <string name="login_warning_valid_phone_num">Please input the correct phone number</string>
    <string name="login_warning_input_password">Please input your password</string>
    <string name="login_warning_wrong_password">Wrong password</string>
    <string name="register_phone">Register with phone number</string>
    <string name="register_wechat">Register with wechat</string>
    <string name="register_login">Already register？Click here to login</string>
    <string name="register_phone_title">Register with phone number</string>
    <string name="register_phone_hint">Phone number</string>
    <string name="register_email_title">Register with email address</string>
    <string name="register_email_hint">Email address</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_retype_password_hint">Input the password again</string>
    <string name="register_district_hint">District</string>
    <string-array name="register_region_array">
        <item>---</item>
        <item>Hong Kong, China</item>
        <item>Mainland, China</item>
    </string-array>
    <string name="register_agree_agreement">I understand and agree&#032;&#032;</string>
    <string name="register_agreement">Agreement</string>
    <string name="register_register_button_text">Register</string>
    <string name="register_warning_input_phone_num">Please input the phone number</string>
    <string name="register_warning_valid_phone_num">Please input the correct phone number</string>
    <string name="register_warning_input_email_address">Please input the email address</string>
    <string name="register_warning_valid_email_address">Please input the correct email address</string>
    <string name="register_warning_input_password">Please input the password</string>
    <string name="register_warning_retype_password">Please input the password again</string>
    <string name="register_warning_not_the_same">The password is not the same</string>
    <string name="register_warning_contains_character">The password should contain at least one English character</string>
    <string name="register_warning_select_region">Please choose the select region</string>
    <string name="register_warning_check_agreement">Please agree the agreement</string>
    <string name="register_verify_phone_title">Verify the Phone</string>
    <string name="register_verify_phone_format">The verifying code has been send to &#032;%1$s&#032;%2$s</string>
    <string name="register_verify_please_input_verify_code">Please input the verifying code to verify the phone</string>
    <string name="register_verify_count_format">The verifying code will become invalid in &#032;&#032;%1$s second</string>
    <string name="register_verify_count_resend">Can not receive the verifying code？Click here to resend the code</string>
    <string name="register_verify_verify_code">Verifying code</string>
    <string name="register_verify_confirm">Confirm</string>
    <string name="register_verify_resend">Resend the verifying code again</string>
    <string name="register_verify_warning_input_verify_code">Please input the verifying code</string>
    <string name="register_finished_title">Register complete</string>
    <string name="register_finished_text_1">Your register procedure is completed！\n</string>
    <string name="register_finished_text_2">Fill in your personal information now，</string>
    <string name="register_finished_text_3">begin to do your first mission！</string>
    <string name="register_finished_continue">Continue</string>
    <string name="edit_profile_title">Set up the profile</string>
    <string name="edit_profile_image_text">Edit</string>
    <string name="edit_profile_name_title">Name</string>
    <string name="edit_profile_phone_title">Telephone</string>
    <string name="edit_profile_age_title">Age</string>
    <string name="edit_profile_email_title">Email</string>
    <string name="edit_profile_introduction_title">Personal introduction</string>
    <string name="edit_profile_activity_added">The activity added</string>
    <string name="edit_profile_tips">A complete profile will rise the credibility of yourself.</string>
    <string name="edit_profile_continue">Continue</string>
    <string name="edit_profile_crop">Crop</string>
    <string name="edit_profile_input_name">Input the name</string>
    <string name="edit_profile_input_phone">Input the phone number</string>
    <string name="edit_profile_input_correct_phone">Please input the correct phone number</string>
    <string name="industry_list_title">Industry list</string>
    <string name="forget_password_title">Forget the password</string>
    <string name="forget_password_tips">Please input the phone number for verifying to reset the password</string>
    <string name="forget_password_phone_hint">Phone number</string>
    <string name="forget_password_continue">Next</string>
    <string name="forget_password_warning_text">Please input the phone number</string>
    <string name="forget_password_wrong_phone">Please input the correct phone number</string>
    <string name="forget_password_can_not_find_phone">Can not find the phone</string>
    <string name="reset_password_title">Reset the password</string>
    <string name="reset_password_password_hint">New password</string>
    <string name="reset_password_retype_hint">Input the password again</string>
    <string name="reset_password_continue">Next</string>
    <string name="reset_password_warning_input_password">Please input the new password</string>
    <string name="reset_password_warning_retype_password">Please input the new password again</string>
    <string name="reset_password_warning_not_the_same">The password input is not same</string>
    <string name="reset_password_finished_title">Reset the password successful！</string>
    <string name="reset_password_finished_text_1">Your password has been changed!\n\n</string>
    <string name="reset_password_finished_text_2">Please login with the new password.</string>
    <string name="reset_password_finished_continue">Complete</string>
    <string name="policy_fragment_title">Policy</string>
    <string name="policy_agree">Agree</string>
    <string name="home_fragment_title">CULife</string>
    <string name="home_login">Login</string>
    <string name="home_show_all">Show all</string>
    <string name="home_show_mission">Display the mission</string>
    <string name="home_show_taker">Display the taker(what)</string>
    <string name="home_shift_text">Shift</string>
    <string name="home_card_mission_no_date">No specific mission</string>
    <string name="home_card_mission_no_location">No specific location</string>
    <string name="home_card_mission_pass_date_format">Before %1$s</string>
    <string name="home_card_taker_evaluate_title">Evaluate</string>
    <string name="home_card_taker_commission_title">Mission</string>
    <string name="home_card_taker_commission_times_format">Been give&#032;%1$d(what)</string>
    <string name="home_shift_title">Shift</string>
    <string name="home_shift_type_title">Mission type</string>
    <string name="home_shift_type_default">All the position</string>
    <string name="home_shift_salary_title">Salary(Hour)</string>
    <string name="home_shift_salary_default">All the salary range</string>
    <string name="home_shift_date_title">Mission date</string>
    <string-array name="home_shift_date_array">
        <item>All the date</item>
        <item>Select the date</item>
    </string-array>
    <string name="home_shift_date_format">%1$s&#032; to &#032;%2$s</string>
    <string name="home_shift_pick_start_date_title">Select the beginning date</string>
    <string name="home_shift_pick_end_date_title">Select the ending date</string>
    <string name="home_shift_date_start_after_end">The beginning date must earlier than the ending date</string>
    <string name="home_shift_date_before_today_warning">The date selected should earlier than today</string>
    <string name="home_shift_date_default">All the date</string>
    <string name="home_shift_confirm">Confirm</string>
    <string name="search_management_title">Advanced search</string>
    <string name="search_management_tab_1_title">Normal search</string>
    <string name="search_management_tab_2_title">Mission nearby</string>
    <string name="search_management_tab_3_title">Save the mission</string>
    <string name="search_normal_for_mission">Search the mission</string>
    <string name="search_normal_for_taker">Search the 委托人(what)</string>
    <string name="search_normal_mission_key_word_hint">Input the keyword</string>
    <string name="search_normal_category_title">Kinds of mission</string>
    <string name="search_normal_category_default">Challenge</string>
    <string name="search_normal_date_title">Date of mission</string>
    <string name="search_normal_date_default">All the date</string>
    <string-array name="search_normal_date_array">
        <item>All the date</item>
        <item>Select the date</item>
    </string-array>
    <string name="search_normal_date_format">%1$s&#032; to &#032;%2$s</string>
    <string name="search_normal_pick_start_date_title">Select the beginning date</string>
    <string name="user_profile_taker_collection_title">收藏的受托人</string>
    <string name="user_profile_wallet_title">钱包</string>
    <string name="user_profile_setting_title">设定</string>
</resources>