<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/spacing_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/spacing_large"
            android:id="@+id/register_verify_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_normal"
            tools:text="@string/register_verify_phone_format"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/register_verify_please_input_verify_code"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_verify_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_normal"
            tools:text="@string/register_verify_count_format"/>

        <EditText
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:id="@+id/register_verify_code"
            android:inputType="number"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_verify_verify_code"/>


    </LinearLayout>


    <Button
        android:layout_margin="@dimen/spacing_normal"
        android:id="@+id/register_verify_confirm_button"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/register_verify_confirm"
        android:textColor="@color/white"
        android:background="@drawable/selector_color_primary"/>


    <Button
        android:layout_margin="@dimen/spacing_normal"
        android:id="@+id/register_verify_resend_button"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:text="@string/register_verify_resend"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>