<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:text="@string/register_finished_text_1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/register_finished_text_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/register_finished_text_3"/>

    </LinearLayout>



    <Button
        android:id="@+id/register_finished_continue_button"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/text_size_normal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/register_finished_continue"
        android:textColor="@color/white"
        android:background="@drawable/selector_color_primary"/>


</RelativeLayout>