<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:text="@string/forget_password_tips"
        android:textSize="@dimen/text_size_normal"
        />

    <EditText
        android:id="@+id/forget_password_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_margin="@dimen/text_size_normal"
        android:background="@android:drawable/edit_text"
        android:hint="@string/forget_password_phone_hint"/>



    <Button
        android:id="@+id/forget_password_continue_button"
        android:layout_margin="@dimen/text_size_normal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/forget_password_continue"
        android:textColor="@color/white"
        android:background="@drawable/selector_color_primary"/>

</LinearLayout>