<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/spacing_large"
        android:padding="@dimen/spacing_large">

        <EditText
            android:id="@+id/reset_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:drawable/edit_text"
            android:hint="@string/reset_password_password_hint"/>


        <EditText
            android:id="@+id/reset_password_retype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@android:drawable/edit_text"
            android:hint="@string/reset_password_retype_hint"/>


    </LinearLayout>


    <Button
        android:id="@+id/reset_password_continue_button"
        android:layout_margin="@dimen/text_size_normal"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:text="@string/reset_password_continue"
        android:textColor="@color/white"
        android:background="@drawable/selector_color_primary"/>

</LinearLayout>