<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/spacing_normal"
        android:padding="@dimen/spacing_normal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/register_et_phone_num"
            android:inputType="phone"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_hint"/>


        <EditText
            android:id="@+id/register_et_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"/>

        <EditText
            android:id="@+id/register_et_retype_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/spacing_normal"
            android:paddingEnd="@dimen/spacing_normal"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_retype_password_hint"/>

        <LinearLayout
            android:orientation="horizontal"
            android:background="@android:drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/register_district_hint"
                android:gravity="start|center_vertical"
                />


            <Spinner
                android:id="@+id/register_region_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:entries="@array/register_region_array"
                android:textAlignment="textEnd"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/spacing_small"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_gravity="end|center_vertical">

                    <CheckBox
                        android:id="@+id/register_policy_checkbox"
                        android:theme="@style/MyCheckBoxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/register_agree_agreement"/>
                <TextView
                    android:id="@+id/register_policy_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/register_agreement"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_margin="@dimen/spacing_normal"
        android:id="@+id/register_phone_register_button"
        android:layout_height="@dimen/button_height_normal"
        android:layout_width="match_parent"
        android:text="@string/register_register_button_text"
        android:textColor="@color/white"
        android:background="@drawable/selector_color_primary"/>




</LinearLayout>